Refactor code structure and remove redundant code blocks for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Karni Exim - Trusted Indian Exporter of Quality Goods Worldwide. Based in Bikaner, Rajasthan." />
+    <meta name="keywords" content="Karni Exim, Indian Export, Bikaner, Apparel, Handicrafts, Global Trade, Sustainable Products" />
+    <meta name="author" content="Karni Exim" />
+    <meta name="robots" content="index, follow" />
+    <title>Karni Exim</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Karni Exim",
+  "url": "https://karni-exim-new.netlify.app",
+  "logo": "https://karni-exim-new.netlify.app/logo.png",
+  "sameAs": [
+    "https://www.facebook.com/0Karniexim/",
+    "https://www.instagram.com/karni_exim/"
+  ],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-8209987858",
+    "contactType": "Customer Service",
+    "areaServed": "IN",
+    "availableLanguage": "English"
+  }
+}
+</script>
+
   </head>
-  <body>
+  <body class="font-sans bg-gray-50 text-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
