feat: Enhance Products and TermsOfService pages with new styles and accessibility improvements
- Updated loading spinner color in Products page to saffron.
- Changed background and text colors in Products page for better visibility.
- Refactored TermsOfService page to remove unused state and scroll listener.
- Improved heading styles and background color in TermsOfService page.
- Added new theme CSS file for consistent color usage across the application.
- Introduced accessibility utilities for color contrast checks and ARIA attribute validation.
- Added image optimization utilities for better loading performance.
- Created QA testing script for performance and accessibility checks.
- Updated Tailwind CSS configuration to include new color palette and font families.
- Enhanced Vite configuration for optimized builds and improved development server settings.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Karni Exim" />
     <meta name="robots" content="index, follow" />
     <title>Karni Exim</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -18,7 +18,7 @@
   "@type": "Organization",
   "name": "Karni Exim",
   "url": "https://karni-exim-new.netlify.app",
-  "logo": "https://karni-exim-new.netlify.app/logo.png",
+  "logo": "https://karni-exim-new.netlify.app/logo.svg",
   "sameAs": [
     "https://www.facebook.com/0Karniexim/",
     "https://www.instagram.com/karni_exim/"
