--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Karni Exim - Trusted Indian Exporter of Quality Goods Worldwide. Based in Bikaner, Rajasthan." />
-    <meta name="keywords" content="Karni Exim, Indian Export, Bikaner, Apparel, Handicrafts, Global Trade, Sustainable Products" />
+    <meta name="description" content="Karni Exim - Trusted Indian Exporter of Quality Textile Products Worldwide. Based in Bikaner, Rajasthan." />
+    <meta name="keywords" content="Karni Exim, Indian Export, Bikaner, Textile, Apparel, Handicrafts, Global Trade, Sustainable Products" />
     <meta name="author" content="Karni Exim" />
     <meta name="robots" content="index, follow" />
-    <title>Karni Exim</title>
+    <title>Karni Exim | Premium Textile Exports from India</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#344C5D" />
+    <link rel="apple-touch-icon" href="/icons/logo192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/icons/logo512.png" />
+    
+    <!-- Open Graph / Facebook / WhatsApp Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://karni-exim-new.netlify.app/" />
+    <meta property="og:title" content="Karni Exim | Premium Textile Exports" />
+    <meta property="og:description" content="Quality textile products exported worldwide from India. Visit our website to explore our premium collection." />
+    <meta property="og:image" content="https://karni-exim-new.netlify.app/og-image.png" />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://karni-exim-new.netlify.app/" />
+    <meta property="twitter:title" content="Karni Exim | Premium Textile Exports" />
+    <meta property="twitter:description" content="Quality textile products exported worldwide from India. Visit our website to explore our premium collection." />
+    <meta property="twitter:image" content="https://karni-exim-new.netlify.app/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -19,16 +37,35 @@
   "name": "Karni Exim",
   "url": "https://karni-exim-new.netlify.app",
   "logo": "https://karni-exim-new.netlify.app/logo.svg",
+  "description": "Premium textile products exported worldwide from India. Karni Exim offers high-quality textiles, apparel, and handicrafts for global markets.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Plot No. 5, Suraj Colony",
+    "addressLocality": "Bikaner",
+    "addressRegion": "Rajasthan",
+    "postalCode": "334001",
+    "addressCountry": "IN"
+  },
   "sameAs": [
     "https://www.facebook.com/0Karniexim/",
-    "https://www.instagram.com/karni_exim/"
+    "https://www.instagram.com/karni_exim/",
+    "https://wa.me/918209987858"
   ],
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+91-8209987858",
-    "contactType": "Customer Service",
-    "areaServed": "IN",
-    "availableLanguage": "English"
+  "contactPoint": [
+    {
+      "@type": "ContactPoint",
+      "telephone": "+91-8209987858",
+      "contactType": "Customer Service",
+      "areaServed": "Worldwide",
+      "availableLanguage": ["English", "Hindi"]
+    },
+    {
+      "@type": "ContactPoint",
+      "contactType": "WhatsApp Support",
+      "telephone": "+91-8209987858",
+      "url": "https://wa.me/918209987858?text=Hi%20Karni%20Exim,%20I'm%20interested%20in%20your%20products.",
+      "availableLanguage": ["English", "Hindi"]
+    }
   }
 }
 </script>
