--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Karni Exim - Trusted Indian Exporter of Quality Textile Products Worldwide. Based in Bikaner, Rajasthan." />
-    <meta name="keywords" content="Karni Exim, Indian Export, Bikaner, Textile, Apparel, Handicrafts, Global Trade, Sustainable Products" />
+    <meta name="description" content="Karni Exim - Leading Manufacturer & Bulk Exporter of Premium Textiles from Bikaner, Rajasthan. Import-Export Solutions for Global Markets. Own Production Facility." />
+    <meta name="keywords" content="Karni Exim, Bulk Export, Import Export, Textile Manufacturer, Bikaner Exporter, Rajasthan Textiles, Wholesale Export, Own Production, International Trade, B2B Export, Bulk Orders, Textile Manufacturing India" />
     <meta name="author" content="Karni Exim" />
     <meta name="robots" content="index, follow" />
-    <title>Karni Exim | Premium Textile Exports from India</title>
+    <meta name="geo.region" content="IN-RJ" />
+    <meta name="geo.placename" content="Bikaner" />
+    <meta name="geo.position" content="28.028338;73.378933" />
+    <meta name="ICBM" content="28.028338, 73.378933" />
+    <title>Karni Exim | Bulk Textile Manufacturer & Exporter from Bikaner, Rajasthan</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#344C5D" />
@@ -17,15 +21,15 @@
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://karni-exim-new.netlify.app/" />
-    <meta property="og:title" content="Karni Exim | Premium Textile Exports" />
-    <meta property="og:description" content="Quality textile products exported worldwide from India. Visit our website to explore our premium collection." />
+    <meta property="og:title" content="Karni Exim | Bulk Textile Manufacturer & Exporter from Bikaner" />
+    <meta property="og:description" content="Leading manufacturer & bulk exporter of premium textiles from Bikaner, Rajasthan. Own production facility for import-export worldwide. B2B bulk orders welcome." />
     <meta property="og:image" content="https://karni-exim-new.netlify.app/og-image.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://karni-exim-new.netlify.app/" />
-    <meta property="twitter:title" content="Karni Exim | Premium Textile Exports" />
-    <meta property="twitter:description" content="Quality textile products exported worldwide from India. Visit our website to explore our premium collection." />
+    <meta property="twitter:title" content="Karni Exim | Bulk Textile Manufacturer & Exporter" />
+    <meta property="twitter:description" content="Leading manufacturer & bulk exporter of premium textiles from Bikaner, Rajasthan. Own production facility for worldwide export." />
     <meta property="twitter:image" content="https://karni-exim-new.netlify.app/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,18 +37,47 @@
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Organization",
+  "@type": ["Organization", "Manufacturer", "LocalBusiness"],
   "name": "Karni Exim",
   "url": "https://karni-exim-new.netlify.app",
   "logo": "https://karni-exim-new.netlify.app/logo.svg",
-  "description": "Premium textile products exported worldwide from India. Karni Exim offers high-quality textiles, apparel, and handicrafts for global markets.",
+  "description": "Leading manufacturer and bulk exporter of premium textile products from Bikaner, Rajasthan. We specialize in import-export of various products worldwide with our own production facility. Serving global markets with quality made-in-India textiles.",
+  "slogan": "Empowering local production. Exporting global value.",
+  "foundingLocation": "Bikaner, Rajasthan, India",
+  "areaServed": "Worldwide",
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Textile Products",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Product",
+          "name": "Bulk Textile Export"
+        }
+      }
+    ]
+  },
+  "makesOffer": {
+    "@type": "Offer",
+    "itemOffered": {
+      "@type": "Service",
+      "name": "Import-Export Services",
+      "description": "Bulk export and import services for textile products worldwide"
+    }
+  },
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "Plot No. 5, Suraj Colony",
+    "streetAddress": "Plot No. 5, Suraj Colony, Near Udasar Army Gate",
     "addressLocality": "Bikaner",
     "addressRegion": "Rajasthan",
     "postalCode": "334001",
     "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "28.028338",
+    "longitude": "73.378933"
   },
   "sameAs": [
     "https://www.facebook.com/0Karniexim/",
