Refocus site branding on agro exports

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Karni Exim - Leading Manufacturer & Bulk Exporter of Premium Textiles from Bikaner, Rajasthan. Import-Export Solutions for Global Markets. Own Production Facility." />
-    <meta name="keywords" content="Karni Exim, Bulk Export, Import Export, Textile Manufacturer, Bikaner Exporter, Rajasthan Textiles, Wholesale Export, Own Production, International Trade, B2B Export, Bulk Orders, Textile Manufacturing India" />
+    <meta name="description" content="Karni Exim - Leading exporter of premium Indian agro commodities including oilseeds, pulses, and spices from Bikaner, Rajasthan. Trusted partner for bulk B2B supply worldwide." />
+    <meta name="keywords" content="Karni Exim, Agro Commodities Exporter, Oilseeds Supplier, Pulses Export India, Spices Exporter, Bikaner Exporter, Rajasthan Agro Products, Bulk Export, B2B Supply, Indian Agriculture Commodities" />
     <meta name="author" content="Karni Exim" />
     <meta name="robots" content="index, follow" />
     <meta name="geo.region" content="IN-RJ" />
     <meta name="geo.placename" content="Bikaner" />
     <meta name="geo.position" content="28.028338;73.378933" />
     <meta name="ICBM" content="28.028338, 73.378933" />
-    <title>Karni Exim | Bulk Textile Manufacturer & Exporter from Bikaner, Rajasthan</title>
+    <title>Karni Exim | Bulk Agro Commodities Exporter from Bikaner, Rajasthan</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/logo192.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/icons/logo192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#344C5D" />
     <link rel="apple-touch-icon" href="/icons/logo192.png" />
@@ -21,15 +24,15 @@
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://karni-exim-new.netlify.app/" />
-    <meta property="og:title" content="Karni Exim | Bulk Textile Manufacturer & Exporter from Bikaner" />
-    <meta property="og:description" content="Leading manufacturer & bulk exporter of premium textiles from Bikaner, Rajasthan. Own production facility for import-export worldwide. B2B bulk orders welcome." />
+    <meta property="og:title" content="Karni Exim | Bulk Agro Commodities Exporter from Bikaner" />
+    <meta property="og:description" content="Leading exporter of premium Indian agro commodities from Bikaner, Rajasthan. Oilseeds, pulses, and spices delivered worldwide for bulk B2B orders." />
     <meta property="og:image" content="https://karni-exim-new.netlify.app/og-image.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://karni-exim-new.netlify.app/" />
-    <meta property="twitter:title" content="Karni Exim | Bulk Textile Manufacturer & Exporter" />
-    <meta property="twitter:description" content="Leading manufacturer & bulk exporter of premium textiles from Bikaner, Rajasthan. Own production facility for worldwide export." />
+    <meta property="twitter:title" content="Karni Exim | Bulk Agro Commodities Exporter" />
+    <meta property="twitter:description" content="Leading exporter of premium Indian agro commodities from Bikaner, Rajasthan. Oilseeds, pulses, and spices delivered worldwide for bulk B2B orders." />
     <meta property="twitter:image" content="https://karni-exim-new.netlify.app/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,19 +44,19 @@
   "name": "Karni Exim",
   "url": "https://karni-exim-new.netlify.app",
   "logo": "https://karni-exim-new.netlify.app/logo.svg",
-  "description": "Leading manufacturer and bulk exporter of premium textile products from Bikaner, Rajasthan. We specialize in import-export of various products worldwide with our own production facility. Serving global markets with quality made-in-India textiles.",
-  "slogan": "Empowering local production. Exporting global value.",
+  "description": "Leading exporter of premium Indian agro commodities including oilseeds, pulses, and spices from Bikaner, Rajasthan. We specialize in reliable bulk supply for global markets with end-to-end export support.",
+  "slogan": "Harvesting India's best for global markets.",
   "foundingLocation": "Bikaner, Rajasthan, India",
   "areaServed": "Worldwide",
   "hasOfferCatalog": {
     "@type": "OfferCatalog",
-    "name": "Textile Products",
+    "name": "Agro Commodities",
     "itemListElement": [
       {
         "@type": "Offer",
         "itemOffered": {
           "@type": "Product",
-          "name": "Bulk Textile Export"
+          "name": "Bulk Agro Commodity Supply"
         }
       }
     ]
@@ -62,8 +65,8 @@
     "@type": "Offer",
     "itemOffered": {
       "@type": "Service",
-      "name": "Import-Export Services",
-      "description": "Bulk export and import services for textile products worldwide"
+      "name": "Agro Commodities Export Services",
+      "description": "Bulk export and import services for Indian agro commodities worldwide"
     }
   },
   "address": {
